# src/controllers/user.controller.ts
@@ -1,31 +1,26 @@
-import { User, IUser } from '@models/user.model';
+import { User } from '@models/user.model';
 import {
   Path,
   GET,
   PathParam,
   Errors,
   POST,
-  PUT,
+  PATCH,
   DELETE
 } from 'typescript-rest';
 import { Response, Produces, Example } from 'typescript-rest-swagger';
 import { NotFoundError } from 'typescript-rest/dist/server/model/errors';
+import { userExample, IUser } from './doc/user';
 
-const exampleUser: IUser = {
-  id: 1,
-  createdAt: new Date(),
-  updatedAt: new Date(),
-  name: 'Joe'
-};
-@Path('/v1/users')
+@Path('/users')
 @Produces('application/json')
-export default class UsersController {
+export class UsersController {
   /**
    * Recovers all active users
    */
   @GET
   @Response<IUser[]>(200, 'Retrieve a list of users.')
-  @Example<Array<IUser>>([exampleUser])
+  @Example<Array<IUser>>([userExample])
   async list() {
     return await User.findAll();
   }
@@ -38,7 +33,7 @@ export default class UsersController {
   @GET
   @Response<IUser>(200, 'Retrieve a user.')
   @Response<NotFoundError>(404, 'User not found')
-  @Example<IUser>(exampleUser)
+  @Example<IUser>(userExample)
   async show(@PathParam('id') id: number): Promise<IUser> {
     const user = await User.findByPk(id);
     if (user) {
@@ -52,18 +47,29 @@ export default class UsersController {
    */
   @POST
   @Response<IUser>(201, 'Created user')
-  async create(user: object) {
+  @Example<IUser>(userExample)
+  async create(user: IUser) {
     return await User.create(user);
   }
 
-  @PUT
-  async update(user: any) {
-    await User.updateOne(user);
+  /**
+   * Updates the user
+   */
+  @PATCH
+  @Example<IUser>(userExample)
+  @Response<number>(200, 'Update the user that was sent')
+  async update(user: IUser): Promise<number> {
+    const result = await User.updateOne(user);
+    return result[0];
   }
 
+  /**
+   * Delete the user by its id
+   * @param id user primary identifier
+   */
   @Path('/:id')
   @DELETE
-  async delete(@PathParam('id') id: number) {
-    await User.deleteOne(id);
+  async delete(@PathParam('id') id: number): Promise<number> {
+    return await User.deleteOne(id);
   }
 }
